# mace-al

./: .gitignore  LICENSE  MANIFEST.in  README.md  job.yaml  machine.json  param.json  pyproject.toml
docs/: manual_en.md  manual_zh.md
mace_al/: cli.py  config.py  demo.py  dft.py  explore.py  io.py  mace.py  paths.py  plotting.py  recovery.py  report.py  runner.py  select.py  uncertainty.py  workflow.py
scripts/: mace_al.py  run_mace_al.sh
templates/vasp/: INCAR  submit_vasp.sh
test_full/: machine.json  param.json
test_full/templates/vasp/: INCAR
test_hfo2_production/: machine.json  param.json
test_hfo2_production/data/: seeds.extxyz
test_hfo2_production/templates/vasp/: INCAR  KPOINTS
test_representative/: param.json
test_representative/templates/vasp/: INCAR  KPOINTS
test_representative_full/: machine.json  param.json
test_representative_full/templates/vasp/: INCAR
test_smoke/: machine.json  param.json
test_smoke/templates/vasp/: INCAR
test_vasp/: machine.json  param.json
test_vasp/templates/vasp/: INCAR
